# Friend-Boat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker_entry.sh  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linting-and-tests.yml  new-latest-release.yml
friend_boat/: __main__.py
friend_boat/bots/: bot.py  settings.py
friend_boat/bots/cogs/: __init__.py  general.py  music.py
friend_boat/models/: music.py  paginator.py  youtube.py
friend_boat/services/: _base.py  music.py  youtube.py
src/: __main__.py
src/bots/: bot.py  settings.py
src/bots/cogs/: __init__.py  general.py  music.py
src/models/: _base.py  bots.py  music.py  youtube.py
src/services/: _base.py  music.py  youtube.py
tests/bot_tests/: test_bot.py
