[tool.poetry]
name = "friend_boat"
version = "1.2.5"
description = "A simple music bot for Discord"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.11.0"
python-youtube = "^0.9.8"
pynacl = "^1.6.0"
yt-dlp = "^2025.09.26"
py-cord = "2.7.0rc1"
slash-cog = "^0.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
bump-my-version = "^1.2.3"

[tool.isort]
line_length = 120

[tool.ruff]
extend-exclude = ["deploy/*", "tests/*"]
line-length = 120
target-version = "py312"

[tool.bumpversion]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
