[project]
name = "friend_boat"
version = "1.3.0"
description = "A simple music bot for Discord"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"
requires-python = ">=3.12,<3.13"
dependencies = [
    "py-cord>=2.6.1",
    "pydantic-settings>=2.12.0",
    "pynacl>=1.6.1",
    "python-youtube>=0.9.8",
    "slash-cog>=0.0.3",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.isort]
line_length = 120

[tool.ruff]
extend-exclude = ["deploy/*", "tests/*"]
line-length = 120
target-version = "py312"

[tool.bumpversion]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
