[project]
name = "friend_boat"
version = "1.4.1"
description = "A simple music bot for Discord"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"
requires-python = ">=3.12,<3.13"
dependencies = [
    "py-cord[voice]>=2.7.1",
    "pydantic-settings>=2.13.1",
    "pynacl>=1.6.2",
    "python-youtube>=0.9.8",
    "slash-cog>=0.0.3",
    "yt-dlp>=2026.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.isort]
line_length = 120

[tool.ruff]
extend-exclude = ["deploy/*", "tests/*"]
line-length = 120
target-version = "py312"

[tool.bumpversion]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord", rev = "master" }
